4-eks/manifest/frontend/admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-deployment
  namespace: aline
  labels:
    aline.component: admin
spec:
  replicas: 1
  selector:
    matchLabels:
      aline.component: admin
  template:
    metadata:
      labels:
        aline.component: admin
    spec:
      containers:
      - name: admin
        image: lyndasm/aline-admin:kubernetes
        ports:
          - containerPort: 3000
        resources:
          limits:
            cpu: "500m"
            memory: "256Mi"
          requests:
            cpu: "200m"
            memory: "128Mi"
      restartPolicy: Always
