4-eks/manifest/frontend/landing-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-deployment
  namespace: aline
  labels:
    aline.component: landing
spec:
  replicas: 1
  selector:
    matchLabels:
      aline.component: landing
  template:
    metadata:
      labels:
        aline.component: landing
    spec:
      containers:
      - name: landing
        image: 052911266688.dkr.ecr.us-west-1.amazonaws.com/aline-landing-portal
        ports:
          - containerPort: 80
        resources:
          limits:
            cpu: "500m"
            memory: "256Mi"
          requests:
            cpu: "200m"
            memory: "128Mi"
      restartPolicy: Always
