4-eks/manifest/frontend/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: aline
  labels:
    aline.component: admin
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  type: LoadBalancer
  selector:
    aline.component: admin
  ports:
    - protocol: TCP
      name: http
      port: 3000
      targetPort: 80
