4-eks/manifest/frontend/landing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing-service
  namespace: aline
  labels:
    aline.component: landing
spec:
  type: LoadBalancer
  selector:
    aline.component: landing
  ports:
    - port: 80
