4-eks/manifest/frontend/member-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: member-service
  namespace: aline
  labels:
    aline.component: member
spec:
  type: LoadBalancer
  selector:
    aline.component: member
  ports:
    - protocol: TCP
      name: member
      port: 80
      targetPort: 80
