4-eks/manifest/frontend/aline-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aline-client-ingress
  annotations:
    kubernetes.io/ingress.class: alb 
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip 
  namespace: aline
  labels:
    aline.component: aline-client-ingress
spec:
  # tls:
  # - hosts:
  #   - alinefinancial.com
  #   secretName: aline-tls-secret
  rules:
    - host: api.alinefinancial.com
      http:
        paths:
        - pathType: Prefix
          path: "/api/"
          backend:
            service:
              name: gateway-service
              port: 
                number: 80
    - host: alinefinancial.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: landing-service
                port:
                  number: 80
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: member-service
                port:
                  number: 80
    - host: admin.alinefinancial.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-service
                port:
                  number: 80
    - host: member.alinefinancial.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: member-service
                port:
                  number: 80
